# url_clicker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_11_25_2356-c2ec002c8cf6_create_table_short_urls.py  2026_02_24_1735-9aa9cd1e7296_crate_field_created_at_in_models_base.py
docker_build/frontend/: Dockerfile  nginx.conf  proxy-headers.conf
docker_build/src/: Dockerfile  entrypoint.sh
frontend/: Dockerfile  nginx.conf
frontend/static/: index.html
frontend/static/css/: index.css
frontend/static/js/: clipboard.js  cookies.js  main.js
src/: alembic.ini  config.py  exceptions.py  main.py  routers.py
src/alembic/: env.py
src/alembic/versions/: 2025_11_25_2356-c2ec002c8cf6_create_table_short_urls.py  2026_02_24_1727-e930c6b9a48c_delete_field_created_at_in_models_.py  2026_02_25_0137-f6ea36c4c998_add_param_unique_in_field_slug_model_.py  2026_02_25_0312-38997383c09b_create_table_anonymous_clicks.py
src/config/: alembic.py  app.py  database.py  database_test.py  paths.py  redis.py  redis_test.py  settings.py
src/config/envs_template/: .env.appdev.template  .env.base.template  .env.pgbouncer.template  .env.postgres.template  .env.redis.template
src/core/: __init__.py  i18n.py  jinja2_templates.py  redis_client.py
src/database/: __init__.py  base.py  crud.py  db_config.py  dependencies.py  models.py
src/database/crud/: __init__.py  add_slug.py  anonymous_click.py  long_url.py  slug_and_count.py
src/database/models/: __init__.py  anon_click.py  base.py  short_url.py
src/dependencies/: __init__.py  click_data.py  language.py  rate_limit.py
src/exceptions/: __init__.py  handler.py  invalid_url.py  no_long_found.py  rate_limit_exceeded.py  shortener_base.py  slug_already_exists_db.py  unexpected.py
src/locales/: en.json  ru.json
src/routers/: __init__.py  health.py  index.py  shortener.py
src/schemas/: __init__.py  click_data.py  shortener.py  slug_count_info.py
src/services/: __init__.py  long_url.py  rate_limiter.py  slug.py
src/templates/: index.html  result.html
src/utils/: __init__.py  set_language.py  shortener.py  valid_url.py
tests/: conftest.py  test_api.py  test_util.py
