[project]
name = "url-clicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "granian>=2.6.0",
    "greenlet>=3.2.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
lint = [
    "black>=25.11.0",
    "pre-commit>=4.5.0",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

[tool.black]
# Black settings
line-length = 100
skip-string-normalization = true
extend-exclude = '''
/(\\.venv|\\.git|__pycache__)/
'''
force-exclude = '''
/(\\.venv|\\.git|__pycache__)/
'''
include = "src/*.py"

[tool.isort]
# isort settings
profile = "black"
line_length = 100
# default_section = "THIRDPARTY"
known_first_party = ["src"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic", "alembic", "pytest", "granian"]
src_paths  = ["src"]
skip = [".venv", ".git", "__pycache__", "alembic/env.py"]
include_trailing_comma = true
combine_as_imports = true
force_sort_within_sections = true

[tool.pyright]
# settings Pylance/Pyright
extraPaths = ["src"] # дополнительный корень для импортов в проекте

[tool.pytest.ini_options]
# pytest settings
minversion = "6.0"
asyncio_mode = "auto"
# отчет формируется по url \\wsl.localhost\Ubuntu\home\yrmisi\PythonProjects\clicker_avito\htmlcov\index.html
addopts = "--cov=src -v -x --cov-report html"
testpaths = ["tests"]
pythonpath = "src"
